CompanyContact and EstateContact

--- a/E-EstateV2/src/app/company-detail/company-detail.component.html
+++ b/E-EstateV2/src/app/company-detail/company-detail.component.html
@@ -14,9 +14,9 @@
       {{ company.isActive == true ? "Activate" : "Deactivate" }}
     </button>
     <br /><br />
-    <button class="btn-update" (click)="openDialog(company)">
+    <!-- <button class="btn-update" (click)="openDialog(company)">
       Update &nbsp; <i class="fa fa-pencil"></i>
-    </button>
+    </button> -->
   </div>
 
   <div style="float:right;" *ngIf="userRole == 'CompanyAdmin'">
@@ -27,9 +27,9 @@
       {{ company.isActive == true ? "Active" : "Inactive" }}
     </button>
     <br /><br />
-    <button class="btn-update" (click)="openDialog(company)">
+    <!-- <button class="btn-update" (click)="openDialog(company)">
       Update &nbsp; <i class="fa fa-pencil"></i>
-    </button>
+    </button> -->
   </div>
 
   <div>
@@ -93,8 +93,73 @@
 
     </table>
   </div>
-
   <br />
+
+  <hr/>
+  
+  <div>
+    <h1>List of Additional Contact</h1>
+    <button style="margin-bottom: 10px" class="btn-add" (click)="openDialogCompanyContact(contacts, company)">
+      Add New Contact &nbsp; <i class="fa fa-plus"></i>
+    </button>
+
+    <input type="text" [(ngModel)]="term" placeholder="Filter Contact" />
+    <div style="overflow-x: auto">
+      <table style="width: 100%">
+        <thead>
+          <tr>
+            <th *ngFor="let column of sortableColumnContacts" scope="col" [appSort]="contacts" [attr.data-order]="order"
+              [attr.data-name]="column.columnName" (click)="toggleSort(column.columnName)">
+              {{ column.displayText }}
+            </th>
+            <th width="90px">Status</th>
+            <th width="30px">Action</th>
+          </tr>
+        </thead>
+
+        <tr *ngIf="isLoading">
+          <td colspan="6">
+            <ngx-skeleton-loader appearance="line" animation="progress-dark" [theme]="{height:'50px'}">
+            </ngx-skeleton-loader>
+          </td>
+        </tr>
+
+        <tr *ngIf="contacts.length == 0">
+          <td colspan="6"><b>No Additional Contact</b></td>
+        </tr>
+
+        <tbody
+          *ngFor="let contact of contacts | filter : term | paginate: { itemsPerPage: 10, currentPage: pageNumber }">
+          <tr class="list" style="cursor: default;">
+            <td style="cursor: pointer;">{{contact.name}}</td>
+            <td>{{ contact.position }}</td>
+            <td>{{ contact.phoneNo }}</td>
+            <td>{{ contact.email }} </td>
+            <td>
+              <button style="cursor: pointer;" (click)="statusContact(contact)" [ngClass]="{
+                'active-btn': contact.isActive == true,
+                'inactive-btn': contact.isActive == false
+              }">
+                {{ contact.isActive == true ? "Active" : "Inactive" }}
+              </button>
+            </td>
+            <td>
+              <button class="btn-update" (click)="openDialogCompanyContact(contact, company)">
+                <i class="fa fa fa-pencil"></i>
+              </button>
+            </td>
+          </tr>
+
+          
+
+        </tbody>
+      </table>
+
+      <pagination-controls (pageChange)="pageNumber = $event"></pagination-controls>
+
+    </div>
+  </div>
+<br/>
 
   <div class="box-container" *ngIf="userRole == 'Admin'">
     <h1>List of Estates</h1>
@@ -125,6 +190,10 @@
             <ngx-skeleton-loader appearance="line" animation="progress-dark" [theme]="{height:'50px'}">
             </ngx-skeleton-loader>
           </td>
+        </tr>
+
+        <tr *ngIf="company.estates.length == 0">
+          <td colspan="9"><b>No Estate</b></td>
         </tr>
 
         <tbody
