--- a/E-EstateV2/src/app/utility/utility.component.html
+++ b/E-EstateV2/src/app/utility/utility.component.html
@@ -29,8 +29,8 @@
     </button>
     <button class="btn" routerLink="cost-category" routerLinkActive="active">
       Cost Category
-    </button> -->
-    <!-- <button class="btn" routerLink="cost-item" routerLinkActive="active">
+    </button>
+    <button class="btn" routerLink="cost-item" routerLinkActive="active">
       Cost Item
     </button> -->
     <button class="btn" routerLink="labor-type" routerLinkActive="active">
