--- a/E-EstateV2/src/app/edit-estate-detail/edit-estate-detail.component.css
+++ b/E-EstateV2/src/app/edit-estate-detail/edit-estate-detail.component.css
@@ -24,3 +24,11 @@ mat-option{
   font-size: 12px;
 }
 
+.detailAdmin td {
+  text-align: left;
+  padding: 6px;
+  border-bottom: none;
+  padding-right: 15px;
+}
+
+
