--- a/E-EstateV2/src/app/edit-estate-detail/edit-estate-detail.component.html
+++ b/E-EstateV2/src/app/edit-estate-detail/edit-estate-detail.component.html
@@ -2,7 +2,7 @@
   <h1>Estate Information</h1>
   <hr />
 
-  <div style="columns: 2" class="column">
+  <!-- <div style="columns: 2" class="column">
     <label>Estate Name :</label>
     <input type="text" name="estateName" [(ngModel)]="estate.estateName" />
     <label>Address 1 :</label>
@@ -74,6 +74,122 @@
   <div style="columns: 2">
     <label>Latitude-Longitude :</label>
     <input type="text" name="latLong" [(ngModel)]="estate.latitudeLongitude" />
+  </div> -->
+
+  <table class="detailAdmin">
+    <tr>
+      <td>Estate Name</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+      <td>Company Name</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+    </tr>
+
+    <tr>
+      <td>License No</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+      <td>Area</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+    </tr>
+
+    <tr>
+
+      <td>Address</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+      <td>District</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+      
+    </tr>
+
+    <tr>
+
+      <td>Postcode</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+      <td>Parliment</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+    </tr>
+
+    <tr>
+
+      <td>State</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+      <td>Dun</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+    </tr>
+
+    <tr>
+      <td>Town</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+      <td>Latitude</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+    </tr>
+
+    <tr>
+
+      <td>Estate Manager</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+      <td>Longitude</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+      
+    </tr>
+
+    <tr>
+
+      <td>Contact No</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+      <td>Email</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+    </tr>
+
+    <tr>
+
+      <td>Estate Phone No</td>
+      <td><span>:</span></td>
+      <td>MYLESEN</td>
+
+    </tr>
+
+    
+  </table>
+
+  <br/>
+  <hr>
+
+  <div style="columns: 2" class="column">
+    <label>Ownership No (Grant) :</label>
+    <input type="text" name="ownershipNo"  />
+    <label>Planting Material :</label>
+    <mat-select name="platingMaterial" placeholder="Please Choose" >
+    </mat-select>
   </div>
 
   <div style="padding-right: 10px">
