--- a/E-EstateV2/src/app/utility/utility.component.html
+++ b/E-EstateV2/src/app/utility/utility.component.html
@@ -6,6 +6,9 @@
     <button class="btn" routerLink="town" routerLinkActive="active">
       Town
     </button>
+    <button class="btn" routerLink="planting-material" routerLinkActive="active">
+      Planting Material
+    </button>
     <button class="btn" routerLink="financialYear" routerLinkActive="active">
       Financial Year
     </button>
